Bug 13654 - possible recursive locking detected at kmem_cache_free
Summary: possible recursive locking detected at kmem_cache_free
Status: CLOSED CODE_FIX
Alias: None
Product: Memory Management
Classification: Unclassified
Component: Slab Allocator (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andrew Morton
URL:
Keywords:
Depends on:
Blocks: 13615
  Show dependency tree
 
Reported: 2009-06-28 22:20 UTC by Rafael J. Wysocki
Modified: 2009-07-06 23:30 UTC (History)
0 users

See Also:
Kernel Version: 2.6.31-rc1
Tree: Mainline
Subsystem:
Regression: Yes


Attachments

Description Rafael J. Wysocki 2009-06-28 22:20:14 UTC
Subject    : possible recursive locking detected at kmem_cache_free
Submitter  : "Pallipadi, Venkatesh" <venkatesh.pallipadi@intel.com>
Date       : 2009-06-25 11:59
References : http://lkml.org/lkml/2009/6/25/373
Handled-By : Pekka J Enberg <penberg@cs.helsinki.fi>
Patch      : http://patchwork.kernel.org/patch/32525/

This entry is being used for tracking a regression from 2.6.29.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Rafael J. Wysocki 2009-07-06 23:30:48 UTC
Fixed by commit ec5a36f94e7ca4b1f28ae4dd135cd415a704e772 .

Note You need to log in before you can comment on or make changes to this bug.